--- a/css/style.scss
+++ b/css/style.scss
@@ -96,6 +96,13 @@ section{
     }
 }
 
+@keyframes fadeUp{
+    0%{
+        opacity: 0;
+        transform: translateY(4rem);
+    }
+}
+
 .header{
     position: sticky;
     top: 0;
@@ -241,10 +248,164 @@ section{
 
 }
 
+.steps{
+    background: $blue;
 
+    .box-container{
+        @include grid(32rem);
 
+        .box{
+            text-align: center;
+            padding: 3rem 2rem;
 
+            img{
+                height: 20rem;
+            }
 
+            h3{
+                font-size: 2.2rem;
+                padding: 2rem 0;
+            }
+
+            p{
+                font-size: 1.7rem;
+                line-height: 2;
+                padding-bottom: 1rem;
+            }
+        }
+    }
+}
+
+.features{
+
+    .box-container .box{
+        display: flex;
+        flex-wrap: wrap;
+        gap: 2rem;
+        align-items: center;
+        min-height: 60vh;
+        margin: 1rem 0;
+        margin-bottom: 3rem;
+
+        &:last-child{
+            margin-bottom: 0;
+        }
+
+        &:nth-child(even){
+            flex-flow: row-reverse wrap;
+        }
+
+        .image{
+            flex: 1 1 42rem;
+
+            img{
+                width: 100%;
+            }
+        }
+
+        .content{
+            flex: 1 1 42rem;
+
+            h3{
+                font-size: 3rem;
+                line-height: 1.5;                
+            }
+
+            p{
+                padding: 1.5rem 0;
+                line-height: 2;
+                font-size: 1.7rem;
+            }
+        }
+    }
+} 
+
+.pricing{
+    background: $pink;
+    text-align: center;
+
+    .price-toggler{
+        display: inline-block;      
+        border-radius: .5rem;
+        padding: .5rem;
+        margin-bottom: 3rem;
+        background: $white;
+        border: $border;
+
+        span{
+            display: inline-block;
+            font-weight: bolder;
+            padding: 1rem 3rem;
+            font-size: 1.7rem;
+            cursor: pointer;
+            color: $black;
+            border-radius: .5rem;
+
+            &.active{
+                background: $black;
+                color: $white;
+            }
+        }
+    }
+
+    .box-container{
+        @include grid(32rem);
+
+        .box{
+            padding: 3rem 2rem;
+            border-radius:.5rem ;
+            background: $white;
+
+            &:nth-child(2){
+                border: $border;
+
+                h3{
+                    background: $pink;
+                }
+            }
+
+            h3{
+                font-size: 2rem;
+                display: inline-block;
+                border-radius: .5rem
+                padding .5rem 1.5rem;
+                background: $blue;
+                margin-bottom: 1rem;
+            }
+
+            .price{
+                padding: 2rem 0;
+
+                .month,
+                .year{
+                    font-size: 5rem;
+                    animation: fadeUp .2s linear backwards;
+
+                    span{
+                        font-size: 3rem;
+                    }
+                }
+
+                .year{
+                    display: none;
+                }
+            }
+
+            .list{
+                padding: 1rem 0;
+
+                p{
+                    padding:1.5rem 0;
+                    font-size: 1.7rem;
+
+                    i{
+                        padding-right: .5rem;
+                    }
+                }
+            }
+        }
+    }
+}
 
 
 @media (max-width:1200px){
