--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,22 @@ section {
           clip-path: polygon(0 80%, 100% 75%, 100% 100%, 0 100%);
 }
 
+@-webkit-keyframes fadeUp {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(4rem);
+            transform: translateY(4rem);
+  }
+}
+
+@keyframes fadeUp {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(4rem);
+            transform: translateY(4rem);
+  }
+}
+
 .header {
   position: -webkit-sticky;
   position: sticky;
@@ -269,6 +285,183 @@ section {
   font-size: 1.7rem;
   line-height: 2;
   padding: 1rem 0;
+}
+
+.steps {
+  background: #cae8e3;
+}
+
+.steps .box-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(32rem, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(32rem, 1fr));
+  gap: 1.5rem;
+}
+
+.steps .box-container .box {
+  text-align: center;
+  padding: 3rem 2rem;
+}
+
+.steps .box-container .box img {
+  height: 20rem;
+}
+
+.steps .box-container .box h3 {
+  font-size: 2.2rem;
+  padding: 2rem 0;
+}
+
+.steps .box-container .box p {
+  font-size: 1.7rem;
+  line-height: 2;
+  padding-bottom: 1rem;
+}
+
+.features .box-container .box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 2rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-height: 60vh;
+  margin: 1rem 0;
+  margin-bottom: 3rem;
+}
+
+.features .box-container .box:last-child {
+  margin-bottom: 0;
+}
+
+.features .box-container .box:nth-child(even) {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-flow: row-reverse wrap;
+          flex-flow: row-reverse wrap;
+}
+
+.features .box-container .box .image {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 42rem;
+          flex: 1 1 42rem;
+}
+
+.features .box-container .box .image img {
+  width: 100%;
+}
+
+.features .box-container .box .content {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 42rem;
+          flex: 1 1 42rem;
+}
+
+.features .box-container .box .content h3 {
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
+.features .box-container .box .content p {
+  padding: 1.5rem 0;
+  line-height: 2;
+  font-size: 1.7rem;
+}
+
+.pricing {
+  background: #f6e4d5;
+  text-align: center;
+}
+
+.pricing .price-toggler {
+  display: inline-block;
+  border-radius: .5rem;
+  padding: .5rem;
+  margin-bottom: 3rem;
+  background: #fff;
+  border: 0.2rem solid #000;
+}
+
+.pricing .price-toggler span {
+  display: inline-block;
+  font-weight: bolder;
+  padding: 1rem 3rem;
+  font-size: 1.7rem;
+  cursor: pointer;
+  color: #000;
+  border-radius: .5rem;
+}
+
+.pricing .price-toggler span.active {
+  background: #000;
+  color: #fff;
+}
+
+.pricing .box-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(32rem, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(32rem, 1fr));
+  gap: 1.5rem;
+}
+
+.pricing .box-container .box {
+  padding: 3rem 2rem;
+  border-radius: .5rem;
+  background: #fff;
+}
+
+.pricing .box-container .box:nth-child(2) {
+  border: 0.2rem solid #000;
+}
+
+.pricing .box-container .box:nth-child(2) h3 {
+  background: #f6e4d5;
+}
+
+.pricing .box-container .box h3 {
+  font-size: 2rem;
+  display: inline-block;
+  border-radius: .5rem padding .5rem 1.5rem;
+  background: #cae8e3;
+  margin-bottom: 1rem;
+}
+
+.pricing .box-container .box .price {
+  padding: 2rem 0;
+}
+
+.pricing .box-container .box .price .month,
+.pricing .box-container .box .price .year {
+  font-size: 5rem;
+  -webkit-animation: fadeUp .2s linear backwards;
+          animation: fadeUp .2s linear backwards;
+}
+
+.pricing .box-container .box .price .month span,
+.pricing .box-container .box .price .year span {
+  font-size: 3rem;
+}
+
+.pricing .box-container .box .price .year {
+  display: none;
+}
+
+.pricing .box-container .box .list {
+  padding: 1rem 0;
+}
+
+.pricing .box-container .box .list p {
+  padding: 1.5rem 0;
+  font-size: 1.7rem;
+}
+
+.pricing .box-container .box .list p i {
+  padding-right: .5rem;
 }
 
 @media (max-width: 1200px) {
