--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&family=Roboto:wght@100;300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap");
 * {
   font-family: 'Roboto', sans-serif;
   margin: 0;
@@ -6,6 +6,7 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   outline: none;
+  border: none;
   text-decoration: none;
   text-transform: capitalize;
 }
@@ -67,21 +68,22 @@ section {
 
 .line-down {
   position: relative;
+  display: inline-block;
   z-index: 0;
 }
 
 .line-down::before {
   content: '';
   position: absolute;
-  bottom: .5rem;
+  bottom: .7rem;
   left: 0;
   right: 0;
   height: 100%;
   width: 100%;
   background: #ffd080;
   z-index: -1;
-  -webkit-clip-path: polygon(0 80%, 100% 75%, 100% 100%, 0 100%);
-          clip-path: polygon(0 80%, 100% 75%, 100% 100%, 0 100%);
+  -webkit-clip-path: polygon(0 85%, 100% 75%, 100% 100%, 0% 100%);
+          clip-path: polygon(0 85%, 100% 75%, 100% 100%, 0% 100%);
 }
 
 @-webkit-keyframes fadeUp {
@@ -185,8 +187,8 @@ section {
 
 .home .image {
   -webkit-box-flex: 1;
-      -ms-flex: 1 1 42em;
-          flex: 1 1 42em;
+      -ms-flex: 1 1 42rem;
+          flex: 1 1 42rem;
   margin-top: 5rem;
 }
 
@@ -204,7 +206,6 @@ section {
 
 .home .content h3 {
   font-size: 6rem;
-  font-weight: bolder;
 }
 
 .home .content p {
@@ -330,7 +331,6 @@ section {
       -ms-flex-align: center;
           align-items: center;
   min-height: 60vh;
-  margin: 1rem 0;
   margin-bottom: 3rem;
 }
 
@@ -426,7 +426,8 @@ section {
 .pricing .box-container .box h3 {
   font-size: 2rem;
   display: inline-block;
-  border-radius: .5rem padding .5rem 1.5rem;
+  border-radius: .5rem;
+  padding: .5rem 1.5rem;
   background: #cae8e3;
   margin-bottom: 1rem;
 }
@@ -462,6 +463,206 @@ section {
 
 .pricing .box-container .box .list p i {
   padding-right: .5rem;
+}
+
+.reviews .slide-container .slide {
+  text-align: center;
+  max-width: 60rem;
+  margin: 1rem auto;
+  display: none;
+}
+
+.reviews .slide-container .slide.active {
+  display: block;
+}
+
+.reviews .slide-container .slide img {
+  height: 10rem;
+  width: 10rem;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-animation: fadeUp .2s linear backwards;
+          animation: fadeUp .2s linear backwards;
+}
+
+.reviews .slide-container .slide P {
+  padding: 1.5rem 0;
+  font-size: 2rem;
+  line-height: 2;
+  -webkit-animation: fadeUp .2s linear .4s backwards;
+          animation: fadeUp .2s linear .4s backwards;
+}
+
+.reviews .slide-container .slide h3 {
+  padding-bottom: .7rem;
+  font-size: 2rem;
+  -webkit-animation: fadeUp .2s linear .6s backwards;
+          animation: fadeUp .2s linear .6s backwards;
+}
+
+.reviews .slide-container .slide span {
+  display: block;
+  font-size: 1.7rem;
+  -webkit-animation: fadeUp .2s linear .8s backwards;
+          animation: fadeUp .2s linear .8s backwards;
+}
+
+.reviews .controls {
+  text-align: center;
+  margin-top: 2rem;
+}
+
+.reviews .controls div {
+  font-size: 5rem;
+  cursor: pointer;
+  margin: 0 1rem;
+}
+
+.reviews .controls div:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+.faq {
+  background: #cae8e3;
+}
+
+.faq .accordion-container {
+  margin: 1rem auto;
+  max-width: 70rem;
+}
+
+.faq .accordion-container .accordion {
+  margin: 1rem 0;
+  background-color: #fff;
+  border-radius: .5rem;
+}
+
+.faq .accordion-container .accordion.active .accordion-heading i {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.faq .accordion-container .accordion.active .accordion-content {
+  display: block;
+}
+
+.faq .accordion-container .accordion .accordion-heading {
+  padding: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 1rem;
+  cursor: pointer;
+}
+
+.faq .accordion-container .accordion .accordion-heading h3 {
+  font-size: 2.2rem;
+  line-height: 1.5;
+}
+
+.faq .accordion-container .accordion .accordion-heading i {
+  font-size: 2rem;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+
+.faq .accordion-container .accordion .accordion-content {
+  padding: 2rem;
+  padding-top: 0;
+  line-height: 2;
+  font-size: 1.7rem;
+  display: none;
+  -webkit-animation: fadeUp .2s linear backwards;
+          animation: fadeUp .2s linear backwards;
+}
+
+.newsletter .content {
+  text-align: center;
+  max-width: 60rem;
+  margin: 1rem auto;
+}
+
+.newsletter .content h3 {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+
+.newsletter .content p {
+  padding: 1rem 0;
+  line-height: 2;
+  font-size: 1.7rem;
+}
+
+.newsletter .content p a {
+  color: #000;
+}
+
+.newsletter .content p a:hover {
+  text-decoration: underline;
+}
+
+.newsletter .content form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border: 0.2rem solid #000;
+  border-radius: .5rem;
+  padding: .5rem;
+  margin: 1rem 0;
+}
+
+.newsletter .content form .email {
+  width: 100%;
+  padding: 1rem 1.4rem;
+  font-size: 1.7rem;
+  text-transform: none;
+}
+
+.newsletter .content form .btn {
+  margin-top: 0;
+}
+
+.footer {
+  background: #f6e4d5;
+}
+
+.footer .box-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(25rem, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  gap: 1.5rem;
+}
+
+.footer .box-container .box h3 {
+  font-size: 2.2rem;
+  padding: 1rem 0;
+}
+
+.footer .box-container .box a {
+  font-size: 2rem;
+  color: #000;
+  display: block;
+  padding: 1rem 0;
+}
+
+.footer .box-container .box a:hover {
+  text-decoration: underline;
+}
+
+.footer .credit {
+  text-align: center;
+  padding: 1rem;
+  margin-top: 2rem;
+  font-size: 2rem;
 }
 
 @media (max-width: 1200px) {
@@ -511,7 +712,7 @@ section {
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
             clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
   }
-  .header a {
+  .header .navbar a {
     display: block;
     margin: 0;
     padding: 1.5rem 2rem;
